<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_main"
        tools:context=".ui.prayerTime.PrayerTimeFragment">

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="Tashkent"
            android:drawableLeft="@drawable/ic_location"
            android:drawablePadding="2dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/cl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/prayer_time_icon"
                android:layout_width="90dp"
                android:layout_height="90dp" />

            <TextView
                android:id="@+id/prayer_time_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#393636"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/prayer_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="30sp" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@id/cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ProgressBar
                android:id="@+id/pb_prayer_time"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:progressTint="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/icon_fajr"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:foregroundGravity="right"
                        android:src="@drawable/ic_subah_prayer" />

                    <TextView
                        android:id="@+id/name_fajr"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:text="@string/fajr"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/time_fajr"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="12dp"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="22:02" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <ImageView
                        android:id="@+id/icon_shuruq"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_ramadan_sunrise" />

                    <TextView
                        android:id="@+id/name_shuruq"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:text="@string/sunrise"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/time_shuruq"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="12dp"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="22:02" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <ImageView
                        android:id="@+id/icon_thuhr"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_zuhar_prayer" />


                    <TextView
                        android:id="@+id/name_thuhr"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:text="@string/dhuhr"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/time_thuhr"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="12dp"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="22:02" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <ImageView
                        android:id="@+id/icon_assr"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_ramadn_azhar" />

                    <TextView
                        android:id="@+id/name_assr"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:text="@string/asr"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/time_assr"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="12dp"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="22:02" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <ImageView
                        android:id="@+id/icon_maghrib"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_maghrib_prayer" />

                    <TextView
                        android:id="@+id/name_maghrib"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:text="@string/maghrib"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/time_maghrib"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="12dp"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="22:02" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/icon_ishaa"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_isha_prayer" />

                    <TextView
                        android:id="@+id/name_ishaa"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:text="@string/isha"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/time_ishaa"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="12dp"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="22:02" />


                </LinearLayout>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>